<resources>
    <string name="app_name">MojPiniadz</string>
    <string name="about">O programie</string>
    <string name="more">Dowiedz się więcej</string>
    <string name="about_program">O programie</string>
    <string name="edit">Edytuj dane użytkownika</string>
    <string name="personal_data">Dane użytkownika </string>
    <string name="edit_PIN">Dodaj/ usuń kod PIN</string>
    <string name="set_PIN">Ustaw kod PIN</string>
    <string name="meneger">Zarządzaj kategoriami wydatków i zysków</string>
    <string name="categories">Zarządzaj kategoriami </string>
    <string name="change_value">Zmień walutę</string>
    <string name="currency">Waluty</string>
    <string name="incomes">Zarobki</string>
    <string name="expanses">Wydatki</string>
    <string name="category">Kategoria</string>

    <string name="value">Kwota</string>
    <string name="description">Opis</string>
    <string name="date">Data</string>
    <string name="time">Czas</string>
    <string name="add">Dodaj</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
